# operating-systems

./: README.md
Zestaw3/: CMakeLists.txt
Zestaw3/DyduchDominik/cw03/zad1/: main.c
Zestaw3/DyduchDominik/cw03/zad2/: Makefile  main.c
Zestaw3/zad2/: main  main.c  sample.txt
Zestaw3/zad3/: main.c  memory_use.c
kolos/: CMakeLists.txt  main.c
zestaw1/: CMakeLists.txt  description.txt
zestaw1/zad1/: DynamicArray.c  DynamicArray.h  Makefile  StaticArray.h
zestaw1/zad2/: DynamicArray.h  Makefile  StaticArray.c  StaticArray.h  raport2.txt  test.c
zestaw1/zad3a/: Makefile  raport3a.txt  test.c
zestaw1/zad3b/: DynamicArray.c  Makefile  raport3b.txt  test.c
zestaw10/: CMakeLists.txt
zestaw10/zad1/: client.c  server.c  spec.h
zestaw10/zad2/: Makefile  client.c  server.c  spec.h
zestaw2/: CMakeLists.txt
zestaw2/zad1/: Makefile  fileops.c  fileops.h  main  main.c
zestaw2/zad2/: Makefile  main  main.c  main_nftw  main_nftw.c
zestaw4/: CMakeLists.txt  z4protipy
zestaw4/zad1/: simple_signals.c
zestaw4/zad3/: main
zestaw5/: CMakeLists.txt
zestaw5/zad1/: Makefile  file.txt  ls.txt  main  main.c
zestaw5/zad2/: Makefile  master  master.c  slave  slave.c
zestaw6/: CMakeLists.txt
zestaw6/zad1/: Makefile  client  client.c
zestaw6/zad2/: Makefile  client  client.c  server  server.c
zestaw7/: CMakeLists.txt
zestaw7/zad2/: barbershop.c  client.c
zestaw8/: CMakeLists.txt  main.c
zestaw8/DyduchDominik/cw08/zad1/: Makefile  main  main.c
zestaw9/: CMakeLists.txt
zestaw9/zad1/: config.txt  main.c
zestaw9/zad2/: Makefile  main  main.c
(+25 files in other folders)
